Custom scrollbars - Closes https://github.com/kamilmielnik/scrabble-solver/issues/203 - Add scrollbars mixin - Enable custom scrollbars in results, dictionary output & modals - Add scrollbar-gutter: stable to results to prevent layout shift when filtering by regexp

--- a/packages/scrabble-solver/src/components/Dictionary/Dictionary.module.scss
+++ b/packages/scrabble-solver/src/components/Dictionary/Dictionary.module.scss
@@ -1,4 +1,8 @@
+@import 'styles/mixins';
+
 .dictionary {
+  @include scrollbars;
+
   position: relative;
   max-height: var(--dictionary--height);
   height: var(--dictionary--height);
