--- a/packages/scrabble-solver/src/components/Modal/Modal.module.scss
+++ b/packages/scrabble-solver/src/components/Modal/Modal.module.scss
@@ -112,6 +112,8 @@
 }
 
 .content {
+  @include scrollbars;
+
   position: relative;
   flex: 1;
   min-height: 0;
