--- a/packages/scrabble-solver/src/styles/mixins.scss
+++ b/packages/scrabble-solver/src/styles/mixins.scss
@@ -12,6 +12,28 @@ $media-expressions: (
   touch: '(hover: none)',
 );
 
+@mixin scrollbars {
+  scrollbar-color: var(--scrollbar--thumb--color) var(--scrollbar--thumb--track);
+  scrollbar-width: auto;
+
+  &::-webkit-scrollbar {
+    width: var(--scrollbar--size);
+    background-color: var(--scrollbar--track--color);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar--thumb--color);
+  }
+
+  &:hover {
+    scrollbar-color: var(--scrollbar--thumb--color--highlight) var(--scrollbar--track--color);
+
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--scrollbar--thumb--color--highlight);
+    }
+  }
+}
+
 /**
  * It does not work when applied on input elements.
  */
